fixed more spacing issues

--- a/style/style.css
+++ b/style/style.css
@@ -1187,6 +1187,10 @@ padding: 60px 20px;
 .explore-block {
 	padding-top: 90px !important;
 }
+
+#exclusive {
+	padding-bottom: 90px;
+}
 @media screen and (max-width: 695px) {
 	.exclusive-list-style-left {
 		float: left;
@@ -1208,7 +1212,6 @@ padding: 60px 20px;
 
 .exclusive-container{
 	width: 100%;
-  height: 300px;
 }
 
 .exclusive-container-left {
